--- a/dropdown menu/index.html
+++ b/dropdown menu/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 
-    <title>Document</title>
+<title>Document</title>
 </head>
 <body>
     <div class="menu">
@@ -33,7 +33,7 @@
             <div class="menu__sub__categories">
                 <!--2 divs for columns-->
                 <!--first column-->
-                <div class="menu__sub__categories__top">
+                <div class="menu__sub__categories__top menu__sub__categories__category">
                     <h3 class="menu__sub__categories__header">
                         Top Categories
                     </h3>
@@ -56,7 +56,7 @@
                     </ul>
                 </div>
                 <!--second column-->
-                <div class="menu__sub__categories__additional">
+                <div class="menu__sub__categories__additional menu__sub__categories__category">
                     <h3 class="menu__sub__categories__header">
                         Additional Categories
                     </h3>
